docs: fix demo code fullscreen overflow

--- a/src/gatsby/assets/styles/_demo.css
+++ b/src/gatsby/assets/styles/_demo.css
@@ -82,7 +82,6 @@ pre {
   @apply border-3 border-gray-200;
   #gatsby_open-full & {
     border: 0 !important;
-    .gatsby_demo_code_body,
     .gatsby_demo_item:not(.populated-iframe) {
       overflow-x: hidden;
       overflow-y: scroll;
@@ -181,6 +180,7 @@ pre {
       position: absolute;
       width: 100%;
       height: 100%;
+
     }
     .gatsby_demo_code_body {
       @apply bg-code;
